modificion de la web, agregar carpeta transparencia

--- a/public/web.config
+++ b/public/web.config
@@ -22,7 +22,15 @@
           </conditions>
           <action type="Rewrite" url="index.php" />
         </rule>
+                <rule name="To HTTPS" stopProcessing="true">
+                    <match url="(.*)" />
+                    <conditions>
+                        <add input="{HTTPS}" pattern="^OFF$" />
+                    </conditions>
+                    <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="SeeOther" />
+                </rule>
       </rules>
     </rewrite>
+        <directoryBrowse enabled="true" />
   </system.webServer>
 </configuration>
