--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^7.0",
+        "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.0"
     },
